# blend-study-planner

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json  userStories.md
backend/: .dockerignore  Dockerfile  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_auth_fields.py  0003_plan_description_target_date_task_completed.py  0004_add_study_documents.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  plans.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  study_document.py  study_plan.py  study_task.py  user.py
backend/app/repositories/: document_repository.py  plan_repository.py  task_repository.py  user_repository.py
backend/app/schemas/: auth.py  study_document.py  study_plan.py  study_plan_agent.py  study_task.py  user.py
backend/app/services/: auth_service.py  chat_service.py  document_service.py  plan_service.py  planning_agent_service.py  task_generation_service.py  task_service.py  user_service.py
backend/app/utils/ai/: checkpointer.py  document_loader.py  embeddings.py  llm.py  planning_agent.py  planning_tools.py  prompts.py  rag_graph.py  vector_store.py
backend/tests/: conftest.py  test_documents_chat.py  test_generate_tasks.py  test_planning_agent.py  test_plans.py  test_tasks.py  test_users.py
docs/: user-story-3-planning-agent.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  global.css  main.tsx
(+21 files in other folders)
