[project]
name = "ai-study-planner-backend"
version = "0.1.0"
description = "AI Study Planner backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.7.0",
    "bcrypt==4.2.0",
    "PyJWT==2.9.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]
