[project]
name = "ai-study-planner-backend"
version = "0.1.0"
description = "AI Study Planner backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.7.0",
    "bcrypt==4.2.0",
    "PyJWT==2.9.0",
    "langchain-anthropic>=0.3.22",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "langchain-core>=0.3.86",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.11",
    "faiss-cpu>=1.14.3",
    "fastembed>=0.8.0",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]
